🦼REPLACED CONTENT WITH FAMOUS QUOTES!

--- a/index.html
+++ b/index.html
@@ -15,26 +15,24 @@
     <div class="box-container">
 
         <div class="box-1">
-            <h1>We have one life to live and I plan on living it</h1>
-            <p>There is nothing like waking up in the morning and understanding that there is a new day to be tackled.
+            <h1>Babe Ruth</h1>
+            <p>Never let the fear of striking out keep you from playing the game.
             </p>
         </div>
         <div class="box-2">
-            <h1>You should never take things for granted. </h1>
-            <p>In fact, you should always go for what it is that you want
-                in life. The only person you have to blame for failure to do is yourself.</p>
+            <h1>Anne Frank </h1>
+            <p>Whoever is happy will make others happy too.</p>
 
         </div>
 
         <div class="box-3">
-            <h1>Being lost is fine.</h1>
-            <p>Whenever you are feeling lost or insecure, be sure to do whatever you need to do to feel appreciated. If
-                that means going out and having some old fashioned fun, then so be it. Be you. No one else. </p>
+            <h1>Benjamin Franklin</h1>
+            <p>Tell me and I forget. Teach me and I remember. Involve me and I learn. </p>
         </div>
 
         <div class="box-4">
-            <h1>It's about the gains.</h1>
-            <p>There will never be a better time than right now.</p>
+            <h1>Mother Teresa</h1>
+            <p>Spread love everywhere you go. Let no one ever come to you without leaving happier.</p>
         </div>
 
         <div class="box-5">
